--- a/phase2.ipynb
+++ b/phase2.ipynb
@@ -39,7 +39,7 @@
         "\n",
         "‎# 2. تحميل البيانات من ملف CSV\n",
         "‎# تأكد من تحميل الملف بشكل صحيح أولاً في Google Colab\n",
-        "data = pd.read_csv('path_to_your_file.csv')\n",
+        "data = pd.read_csv('Raw_dataset.csv')\n",
         "\n",
         "‎# 3. عرض أول 5 صفوف من البيانات للتأكد من تحميلها\n",
         "print(data.head())\n",
