--- a/phase2.ipynb
+++ b/phase2.ipynb
@@ -82,6 +82,16 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "## missing value , five Number summary"
+      ],
+      "metadata": {
+        "id": "vMa3Qjs1V5Sj"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Missing values\n",
