--- a/phase2.ipynb
+++ b/phase2.ipynb
@@ -75,7 +75,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##the code check that there is no problem while reading the file"
+        "#####the code check that there is no problem while reading the file"
       ],
       "metadata": {
         "id": "JaFHdmXmVaX9"
@@ -187,6 +187,16 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "## histogram"
+      ],
+      "metadata": {
+        "id": "1iBtWUUyWSP3"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "df[['GPA','Absences','StudyTimeWeekly']].hist(bins=30, figsize=(12,6))\n",
@@ -225,6 +235,16 @@
       ],
       "metadata": {
         "id": "5Vvw5zUeT-P7"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "## box plot & outliers"
+      ],
+      "metadata": {
+        "id": "gRtwsb0VWeDV"
       }
     },
     {
