--- a/phase2.ipynb
+++ b/phase2.ipynb
@@ -332,9 +332,9 @@
       "cell_type": "markdown",
       "source": [
         "### Boxplots & Outliers\n",
-        "- Description: The boxplots show the spread of data and highlight outliers beyond the whiskers.  \n",
-        "- Insight: Absences has many extreme outliers compared to other attributes.  \n",
-        "- Decision: Justifies applying IQR capping to reduce the impact of extreme values."
+        "- Description: The boxplots display the spread of GPA, Absences, and StudyTimeWeekly.  \n",
+        "- Insight: No significant outliers were detected for these attributes.  \n",
+        "- Decision: Since the values are within reasonable bounds, no heavy outlier treatment is required. However, normalization is still needed because the ranges of the variables are different."
       ],
       "metadata": {
         "id": "GK7RIFnqUIrh"
