--- a/phase2.ipynb
+++ b/phase2.ipynb
@@ -177,10 +177,10 @@
       "cell_type": "markdown",
       "source": [
         "### Missing values & Five-number summary\n",
-        "- Description: The missing values table shows that the dataset has no missing values.  \n",
-        "- Insight: Since there are no null values, we do not need imputation techniques.  \n",
-        "- Five-number summary: Displays min, Q1, median, Q3, and max for each numeric column.  \n",
-        "- Decision: Different ranges across attributes indicate the need for normalization later."
+        "- Description: The missing values table shows that there are no missing values in the dataset (all counts are zero).  \n",
+        "- Insight: Since the dataset is complete, no imputation is required. This means that preprocessing can focus on scaling, discretization, and handling outliers rather than filling missing data.  \n",
+        "- Five-number summary: The summary shows min, Q1, median, Q3, and max for each numeric column. For example, StudyTimeWeekly ranges from 0.01 to ~19.9, Absences from 0 to 29, and GPA from 0 to 4.  \n",
+        "- Decision: The attributes have very different ranges (e.g., Absences up to 29, GPA only up to 4). This confirms the need for normalization so that attributes are on comparable scales before modeling."
       ],
       "metadata": {
         "id": "Jq42GuqdT0U7"
@@ -271,9 +271,9 @@
           "height": 1000
         },
         "id": "bSH8-WIkUCgm",
-        "outputId": "4b80c627-d8bb-4c1a-f9ec-1866ac0127ef"
+        "outputId": "9065ca3e-fb7d-4852-ebe3-32fe77a5fde6"
       },
-      "execution_count": 10,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "display_data",
