--- a/phase2.ipynb
+++ b/phase2.ipynb
@@ -228,10 +228,14 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Histogram\n",
-        "- Description: The histograms display the distributions of GPA, Absences, and StudyTimeWeekly.  \n",
-        "- Insight: Absences shows a long tail with extreme values, and GPA distribution is not uniform.  \n",
-        "- Decision: Indicates the need for outlier handling (capping) and normalization."
+        "### Histograms (GPA, Absences, StudyTimeWeekly)\n",
+        "\n",
+        "- Description: The histograms show the frequency distribution of three numeric attributes: GPA, Absences, and StudyTimeWeekly.  \n",
+        "- Insight:  \n",
+        "  - GPA: The values are spread between 0 and 4, with more students concentrated between 1.0 and 3.0, indicating the distribution is not uniform.  \n",
+        "  - Absences: The distribution is fairly spread but includes some higher values close to 30, suggesting potential extreme cases.  \n",
+        "  - StudyTimeWeekly: Values are distributed across the range (0–20) with slight variations, showing differences in study habits.  \n",
+        "- Decision: The differences in scale and the spread of values justify applying normalization (to make attributes comparable). Absences may also need outlier treatment to handle the extreme values at the upper end."
       ],
       "metadata": {
         "id": "5Vvw5zUeT-P7"
