--- a/phase2.ipynb
+++ b/phase2.ipynb
@@ -336,9 +336,9 @@
       "cell_type": "markdown",
       "source": [
         "### Boxplots & Outliers\n",
-        "- Description: The boxplots display the spread of GPA, Absences, and StudyTimeWeekly.  \n",
-        "- Insight: No significant outliers were detected for these attributes.  \n",
-        "- Decision: Since the values are within reasonable bounds, no heavy outlier treatment is required. However, normalization is still needed because the ranges of the variables are different."
+        "- Description: The boxplots show the spread of GPA, Absences, and StudyTimeWeekly. The median and quartiles are clearly visible for each attribute.  \n",
+        "- Insight: No significant outliers were detected in these three attributes, as all values fall within the whiskers.  \n",
+        "- Decision: Since there are no heavy outliers, we do not need strong outlier removal. However, the attributes still have different ranges (e.g., Absences up to 29 vs. GPA up to 4), so normalization is required during preprocessing."
       ],
       "metadata": {
         "id": "GK7RIFnqUIrh"
