--- a/phase2.ipynb
+++ b/phase2.ipynb
@@ -390,9 +390,9 @@
       "cell_type": "markdown",
       "source": [
         "### Bar plot (Class Label Distribution)\n",
-        "- Description: The bar plot shows the frequency of each grade class.  \n",
-        "- Insight: The dataset is imbalanced, with many students in classes A and C and fewer in class F.  \n",
-        "- Decision: Class imbalance should be considered in the preprocessing and evaluation stages."
+        "- Description: The bar plot shows the distribution of students across grade classes (0–4).  \n",
+        "- Insight: The dataset is highly imbalanced. Most students fall into GradeClass 4.0, while very few students are in GradeClass 0.0. Intermediate classes (1.0–3.0) have moderate counts.  \n",
+        "- Decision: The imbalance may affect classification results, as models could be biased towards the majority class. This indicates that resampling techniques or careful evaluation metrics may be required during preprocessing and modeling."
       ],
       "metadata": {
         "id": "WxX1TzzLXGQY"
