--- a/phase2.ipynb
+++ b/phase2.ipynb
@@ -443,9 +443,9 @@
       "cell_type": "markdown",
       "source": [
         "### Scatter Plot (StudyTimeWeekly vs GPA)\n",
-        "- Description: The scatter plot shows the relationship between weekly study time and GPA.  \n",
-        "- Insight: There is a weak positive trend: students who study more tend to have higher GPA.  \n",
-        "- Decision: Confirms that StudyTimeWeekly is an important predictor and may benefit from normalization.\n"
+        "- Description: The scatter plot displays the relationship between weekly study time and GPA. Each point represents one student.  \n",
+        "- Insight: The plot shows a weak positive trend: students with higher study time generally tend to achieve a higher GPA, although the relationship is not perfectly linear.  \n",
+        "- Decision: This confirms that StudyTimeWeekly is a relevant predictor for GPA. It should be included in modeling but may require normalization so that it is comparable with other numeric attributes.\n"
       ],
       "metadata": {
         "id": "YdPKvYyEXQ9T"
