--- a/phase2.ipynb
+++ b/phase2.ipynb
@@ -51,8 +51,7 @@
         "        df = pd.read_csv(dataset_path)\n",
         "    else:\n",
         "        raise FileNotFoundError(\"file not found neither locally nor in github\")\n",
-        "\n",
-        ""
+        "\n"
       ],
       "metadata": {
         "colab": {
@@ -61,7 +60,7 @@
         "id": "3KDAVtaiJ1wr",
         "outputId": "9de4b96e-c831-4fc3-a239-64a3faff6d3b"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -94,15 +93,23 @@
     {
       "cell_type": "code",
       "source": [
-        "# Missing values\n",
+        "# === Cell 2: Missing Values and Statistical Summaries ===\n",
+        "\n",
+        "# Missing values and their analysis\n",
         "missing = df.isna().sum().sort_values(ascending=False)\n",
         "print(\"Missing values per column:\\n\", missing)\n",
+        "print(\"\\n\" + \"=\"*50)\n",
         "\n",
-        "# Five-number summary\n",
+        "# Five-number summary for numeric attributes (as already calculated)\n",
         "num_cols = df.select_dtypes(include=['float64','int64']).columns\n",
         "five_num = df[num_cols].describe(percentiles=[0.25,0.5,0.75]).T[['min','25%','50%','75%','max']]\n",
-        "print(\"\\nFive-number summary:\")\n",
-        "print(five_num)"
+        "print(\"Five-number summary (Numeric attributes):\")\n",
+        "print(five_num)\n",
+        "print(\"\\n\" + \"=\"*50)\n",
+        "\n",
+        "# Full statistical summary\n",
+        "print(\"Full Statistical Summary:\")\n",
+        "print(df.describe(include='all').T)"
       ],
       "metadata": {
         "colab": {
@@ -111,7 +118,7 @@
         "id": "goX7699qTjLz",
         "outputId": "1ca4a4fd-bbbe-4a90-f7ac-bbd99a3023dc"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -211,7 +218,7 @@
         "id": "lIXeVhR6T2wr",
         "outputId": "64c85bb5-f1ca-4569-a5ce-e657cea8a32f"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -277,7 +284,7 @@
         "id": "bSH8-WIkUCgm",
         "outputId": "9065ca3e-fb7d-4852-ebe3-32fe77a5fde6"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -372,7 +379,7 @@
         "id": "iWfVgeH0W_2q",
         "outputId": "f0734133-abca-4a75-ed6e-3e72aa47772d"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -425,7 +432,7 @@
         "id": "J3yxlJOzXNp8",
         "outputId": "cd3b12e5-93b1-419b-ae5f-80680b99ae68"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
