--- a/phase2.ipynb
+++ b/phase2.ipynb
@@ -60,7 +60,7 @@
         "id": "3KDAVtaiJ1wr",
         "outputId": "062876a1-f53a-4cef-c8ba-e7cb98ccbdc4"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -116,7 +116,7 @@
         "id": "goX7699qTjLz",
         "outputId": "f0b15f72-e4f6-428a-8f8c-75f99d441a10"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -386,7 +386,7 @@
         "id": "OHcuVq4Fz2rK",
         "outputId": "9a1fedd4-da75-46d7-ff73-901d42754427"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -523,7 +523,7 @@
         "id": "lIXeVhR6T2wr",
         "outputId": "57ca1495-8d64-4ae6-f7fe-3d1421f38880"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -543,7 +543,7 @@
         "### Histograms (GPA, Absences, StudyTimeWeekly)\n",
         "\n",
         "**Description:**  \n",
-        "The histograms display the frequency distributions of three numeric attributes — GPA, Absences, and StudyTimeWeekly — to visualize how data values are spread or concentrated within their ranges.\n",
+        "The histograms display the frequency distributions of three numeric attributes GPA, Absences, and StudyTimeWeekly to visualize how data values are spread or concentrated within their ranges.\n",
         "\n",
         "**Insight:**  \n",
         "- **GPA:** Values range from 0 to 4, with most students concentrated between 1.0 and 3.0, indicating moderate academic performance.  \n",
@@ -562,7 +562,7 @@
       "cell_type": "markdown",
       "source": [
         "--------------------------------------------------------------------------------\n",
-        "## box plot & outliers"
+        "## Boxplot & Outlier"
       ],
       "metadata": {
         "id": "gRtwsb0VWeDV"
@@ -594,7 +594,7 @@
         "id": "bSH8-WIkUCgm",
         "outputId": "12e79c6d-5974-4064-aee9-07319b8c35af"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -657,7 +657,7 @@
         "Boxplots visualize the data spread and detect potential outliers by showing quartiles (Q1–Q3), the median, and whiskers for each numeric variable.  \n",
         "\n",
         "**Insight:**  \n",
-        "No extreme outliers were detected for GPA, Absences, or StudyTimeWeekly — all data points fall within acceptable boundaries.  \n",
+        "No extreme outliers were detected for GPA, Absences, or StudyTimeWeekly all data points fall within acceptable boundaries.  \n",
         "However, the box sizes vary: GPA has a narrow range, while Absences and StudyTimeWeekly span wider intervals, confirming range differences.  \n",
         "\n",
         "**Decision:**  \n",
@@ -696,7 +696,7 @@
         "id": "iWfVgeH0W_2q",
         "outputId": "ebff89cd-0211-4efa-f348-98223b4ea0a3"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -756,7 +756,7 @@
         "id": "J3yxlJOzXNp8",
         "outputId": "f91f871b-b94c-46aa-8909-444db5fe4e3f"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
