--- a/phase2.ipynb
+++ b/phase2.ipynb
@@ -733,7 +733,7 @@
       "cell_type": "markdown",
       "source": [
         "--------------------------------------------------------------------------------\n",
-        "## sactter plot"
+        "## Scatter Plot"
       ],
       "metadata": {
         "id": "XWOTihW8XJgx"
