--- a/phase2.ipynb
+++ b/phase2.ipynb
@@ -1892,31 +1892,11 @@
         "import os\n",
         "import pandas as pd\n",
         "\n",
-        "# ✅ 1. تأكد من وجود الأعمدة الجديدة قبل الحفظ\n",
-        "expected_cols = ['StudyTimeWeekly_transformed', 'GPA_scaled', 'Absences_scaled', 'GPA_binned']\n",
-        "missing_cols = [col for col in expected_cols if col not in df.columns]\n",
+        "if not os.path.exists('Dataset'):\n",
+        "    os.makedirs('Dataset')\n",
         "\n",
-        "if missing_cols:\n",
-        "    raise ValueError(f\"⚠️ Warning: Missing processed columns before saving: {missing_cols}\")\n",
-        "else:\n",
-        "    # ✅ 2. تأكد من وجود مجلد Dataset\n",
-        "    if not os.path.exists('Dataset'):\n",
-        "        os.makedirs('Dataset')\n",
-        "\n",
-        "    # ✅ 3. احفظ الملف بعد المعالجة\n",
-        "    save_path = 'Dataset/Preprocessed_dataset.csv'\n",
-        "    df.to_csv(save_path, index=False)\n",
-        "\n",
-        "    # ✅ 4. تحقق من الحفظ بقراءة الملف مرة أخرى\n",
-        "    check = pd.read_csv(save_path)\n",
-        "\n",
-        "    print(\"✅ Preprocessed dataset saved successfully!\")\n",
-        "    print(f\"📁 Saved file path: {save_path}\")\n",
-        "    print(f\"📊 Columns in saved file: {list(check.columns)}\")\n",
-        "\n",
-        "    # ✅ 5. (اختياري) اطبعي رابط GitHub لإضافته في التقرير\n",
-        "    print(\"\\n🔗 GitHub link to access file:\")\n",
-        "    print(\"https://github.com/lujainAziz/LujainAlmajyul-it326/tree/main/Dataset/Preprocessed_dataset.csv\")"
+        "df.to_csv('Dataset/Preprocessed_dataset.csv', index=False)\n",
+        "print(\"✅ Preprocessed dataset saved successfully!\")"
       ],
       "metadata": {
         "colab": {
