--- a/Reports Folder/phase3.ipynb
+++ b/Reports Folder/phase3.ipynb
@@ -4537,7 +4537,15 @@
         "\n",
         "2. **Low-performing cluster**\n",
         "   - Students with **low GPA**, **many absences**, and **less study time**.\n",
-        "   - Likely corresponds to GradeClass 0 and 1.\n"
+        "   - Likely corresponds to GradeClass 0 and 1.\n",
+        "\n",
+        "3. **Medium-performing cluster**\n",
+        "   - Students with moderate GPA (around 1.5–2.5), average absences (10–20),\n",
+        "     and medium levels of study time and parental support.\n",
+        "   - This group represents students who are neither struggling nor excelling,\n",
+        "     and likely corresponds to GradeClass 2–3.\n",
+        "   - These students show potential for improvement with targeted interventions\n",
+        "     such as enhanced tutoring or increased parental engagement."
       ],
       "metadata": {
         "id": "M2C-agc-XAA_"
@@ -4622,6 +4630,7 @@
     {
       "cell_type": "markdown",
       "source": [
+        "---\n",
         "# [7] Findings and Discussion\n",
         "\n",
         "## 7.1 Classification Findings\n",
@@ -4638,8 +4647,8 @@
         "\n",
         "K-means clustering was applied with K values from 2 to 10. Using both WCSS (Elbow Method) and Silhouette scores:\n",
         "\n",
-        "- The Elbow plot suggests **[write candidate K]** as a good balance between model complexity and within-cluster variance.\n",
-        "- The Silhouette scores indicate that **K = [write best K]** provides the best cluster separation.\n",
+        "- The Elbow plot suggests **K ≈ 4** as a good balance between model complexity and within-cluster variance.\n",
+        "- The Silhouette scores indicate that **K = 3** provides the best cluster separation.\n",
         "\n",
         "The final clusters reveal distinct student groups:\n",
         "- A high-performance group: high GPA, high study time, low absences, good parental support.\n",
@@ -4653,7 +4662,64 @@
         "- **Classification (Decision Tree)** offers an interpretable predictive model that can be used to automatically identify at-risk students based on their characteristics.\n",
         "- **Clustering (K-means)** uncovers hidden patterns and groups of students with similar behavior, which can help educators design targeted support strategies for each cluster.\n",
         "\n",
-        "These results are aligned with educational literature, which emphasizes the importance of attendance, study effort, and family support in academic success.\n"
+        "These results are aligned with educational literature, which emphasizes the importance of attendance, study effort, and family support in academic success.\n",
+        "\n",
+        "\n",
+        "## Comparison with Related Research\n",
+        "\n",
+        "Our findings align closely with the research conducted by Baradwaj and Pal (2011),\n",
+        "who applied Decision Tree classification (ID3 algorithm) to predict student performance\n",
+        "in higher education. Their study, which analyzed 50 students from VBS Purvanchal University,\n",
+        "India, demonstrated that attendance, class test grades, and previous semester marks were\n",
+        "the most influential predictors of end-semester performance.\n",
+        "\n",
+        "**Similarities with our results:**\n",
+        "\n",
+        "1. **Attendance as a Critical Factor:**\n",
+        "   Baradwaj and Pal's research confirmed that attendance strongly correlates with\n",
+        "   academic success, with their decision tree placing attendance (ATT) as a high-priority\n",
+        "   splitting criterion. Our analysis similarly found that Absences has a strong negative\n",
+        "   correlation with GPA (-0.92), making it one of the top predictors in our Decision Tree model.\n",
+        "\n",
+        "2. **Previous Academic Performance:**\n",
+        "   In their study, Previous Semester Marks (PSM) served as the root node with the highest\n",
+        "   information gain (0.577). Similarly, our model identified GPA_scaled as the most\n",
+        "   influential feature at the top level of the tree, confirming that prior academic\n",
+        "   achievement is the strongest indicator of future performance.\n",
+        "\n",
+        "3. **Study Habits and Support:**\n",
+        "   While Baradwaj and Pal focused on class test grades and assignments, our dataset\n",
+        "   extended this to include StudyTimeWeekly and ParentalSupport, both of which showed\n",
+        "   significant positive correlations with student success. This aligns with their\n",
+        "   conclusion that consistent academic activities improve performance.\n",
+        "\n",
+        "**Key Differences:**\n",
+        "\n",
+        "- **Dataset Scale:** Our study analyzed 2,392 students compared to their 50 students,\n",
+        "  providing more robust and generalizable results.\n",
+        "- **Class Imbalance:** Our dataset exhibited significant class imbalance (1,211 students\n",
+        "  in GradeClass 4 vs. 107 in GradeClass 0), which required careful evaluation of minority\n",
+        "  class predictions—an issue not addressed in their smaller, more balanced dataset.\n",
+        "- **Clustering Analysis:** Unlike Baradwaj and Pal, who focused solely on classification,\n",
+        "  we also applied K-means clustering to discover hidden behavioral patterns. Our clustering\n",
+        "  results (K=3) revealed three distinct student profiles: high performers, low performers,\n",
+        "  and medium performers, providing additional insights beyond classification alone.\n",
+        "\n",
+        "**Validation of Educational Principles:**\n",
+        "\n",
+        "Both studies confirm the importance of attendance, prior performance, and consistent\n",
+        "engagement in predicting student success. Baradwaj and Pal's IF-THEN rules, such as:\n",
+        "\"IF PSM = 'First' AND ATT = 'Good' AND CTG = 'Good' THEN ESM = 'First'\" mirror our\n",
+        "Decision Tree findings, where students with high GPA, low absences, and strong study\n",
+        "habits are classified into higher grade categories.\n",
+        "\n",
+        "**Conclusion:**\n",
+        "\n",
+        "Our results validate and extend the findings of Baradwaj and Pal (2011) by demonstrating\n",
+        "that data mining techniques—particularly Decision Trees—can effectively predict student\n",
+        "performance across different educational contexts and dataset sizes. The consistency\n",
+        "between our findings and their research reinforces the reliability of these methods for\n",
+        "educational data mining and supports their application in early identification of at-risk students."
       ],
       "metadata": {
         "id": "okec_hTL0cJO"
@@ -4668,7 +4734,9 @@
         "\n",
         "Clustering results showed that K = 3 is the optimal number of clusters based on the combined Elbow and Silhouette analyses. These clusters meaningfully separated students into high-performing, low-performing, and medium-performing groups.\n",
         "\n",
-        "Overall, the results demonstrate that data mining techniques can effectively support academic institutions in early detection of at-risk students, understanding key performance factors, and designing targeted interventions to enhance student success.\n"
+        "Overall, the results demonstrate that data mining techniques can effectively support academic institutions in early detection of at-risk students, understanding key performance factors, and designing targeted interventions to enhance student success.\n",
+        "\n",
+        "---"
       ],
       "metadata": {
         "id": "xO-gVRZYN_J9"
@@ -4681,9 +4749,12 @@
         "\n",
         "[1] J. Han, M. Kamber, and J. Pei, *Data Mining: Concepts and Techniques*, 3rd ed. Morgan Kaufmann, 2011.\n",
         "\n",
-        "[2] R. Elkharoua, “Students Performance Dataset,” Kaggle, 2024. [Online]. Available: https://www.kaggle.com/datasets/rabieelkharoua/students-performance-dataset\n",
+        "[2] B. K. Baradwaj and S. Pal, \"Mining Educational Data to Analyze Students' Performance,\"  \n",
+        "    *International Journal of Advanced Computer Science and Applications*, vol. 2, no. 6,  \n",
+        "    pp. 63–69, 2011.\n",
         "\n",
-        "[3] A. R. Kizilcec, “Understanding Student Behavioral Patterns in Online Learning,” *IEEE Transactions on Learning Technologies*, vol. 13, no. 3, pp. 451–463, 2020."
+        "[3] A. R. Kizilcec, “Understanding Student Behavioral Patterns in Online Learning,”  \n",
+        "    *IEEE Transactions on Learning Technologies*, vol. 13, no. 3, pp. 451–463, 2020.\n"
       ],
       "metadata": {
         "id": "1FOXH7DM0e12"
