--- a/Reports Folder/phase3.ipynb
+++ b/Reports Folder/phase3.ipynb
@@ -4635,9 +4635,12 @@
         "\n",
         "## 7.1 Classification Findings\n",
         "\n",
-        "The Decision Tree classifier was evaluated using three train–test partitions (60–40, 70–30, and 80–20) and two attribute selection measures (Gini and entropy). The accuracy table shows that:\n",
+        "The Decision Tree classifier was evaluated using three train–test partitions (60–40, 70–30, and 80–20) and two attribute selection measures (Gini and entropy).\n",
         "\n",
-        "- [Describe which partition and criterion gave the highest accuracy, e.g., **70% training with Gini**.]\n",
+        "The accuracy table shows that:\n",
+        "The highest accuracy was achieved using 80% training data with the Gini criterion (0.868476),\n",
+        "followed closely by 80% training with Entropy (0.860125). The 70% training partition with\n",
+        "Gini also performed well (0.855153).\n",
         "- The differences in accuracy between Gini and entropy are small, but one of them slightly outperforms the other depending on the partition.\n",
         "- The confusion matrices reveal that some GradeClass categories, especially the minority classes, are more difficult to predict.\n",
         "\n",
