--- a/Reports Folder/phase3.ipynb
+++ b/Reports Folder/phase3.ipynb
@@ -341,9 +341,7 @@
         "- Macro-averaged Precision, Recall, and F1-score  \n",
         "- Confusion Matrix  \n",
         "\n",
-        "All results are presented in tables, and one final Decision Tree is visualized for interpretation.\n",
-        "\n",
-        "These clusters provide meaningful insight into different student profiles and can help design targeted interventions for each group."
+        "All results are presented in tables, and one final Decision Tree is visualized for interpretation.\n"
       ],
       "metadata": {
         "id": "IWAxZkaGzvdT"
@@ -4609,7 +4607,7 @@
       "source": [
         "### Final Conclusion for K-means Clustering\n",
         "\n",
-        "Based on WCSS and Silhouette analysis, the optimal number of clusters is **K = [BEST_K]**. This K provides the best balance between cluster compactness (low WCSS) and separation (high silhouette score).\n",
+        "Based on WCSS and Silhouette analysis, the optimal number of clusters is **K = 3**. This K provides the best balance between cluster compactness (low WCSS) and separation (high silhouette score).\n",
         "\n",
         "The clusters show meaningful student groupings:\n",
         "- A high-performing group (high GPA, low absences, high parental support)\n",
