--- a/Reports Folder/Phase3.ipynb
+++ b/Reports Folder/Phase3.ipynb
@@ -2060,10 +2060,9 @@
       "source": [
         "### 6.1.4 Interpretation of Accuracy\n",
         "\n",
-        "- Best accuracy: **Gini @ 80% training = 0.868476**  \n",
-        "- Entropy slightly lower at the same split  \n",
-        "- Accuracy improves with larger training sizes  \n",
-        "- Gini outperforms entropy overall"
+        "- Entropy performs slightly better at the 60% training split.\n",
+        "- Gini performs better at the 70% and 80% training splits.\n",
+        "- The best overall accuracy is achieved using Gini at 80% (0.868476)."
       ],
       "metadata": {
         "id": "6nx5UiVw7tGp"
@@ -4839,15 +4838,18 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### Interpretation of Elbow & Silhouette\n",
+        "### Interpretation of Elbow & Silhouette\n",
         "\n",
-        "- The Elbow curve starts flattening around **K = 4**, suggesting diminishing returns after that point.\n",
-        "- The highest Silhouette score occurs at **K = 3**.\n",
+        "The Elbow curve begins to flatten around **K ≈ 4**, indicating diminishing improvement in compactness beyond this point.\n",
+        "\n",
+        "However, the **highest Silhouette Score occurs at K = 2**, which means K = 2 provides the strongest separation and cohesion between clusters.\n",
         "\n",
         "**Conclusion:**\n",
-        "- Elbow suggests **K ≈ 4**\n",
-        "- Silhouette suggests **K = 3**\n",
-        "- Based on majority rule and better separation, **BEST_K = 3**."
+        "- Elbow suggests K ≈ 4  \n",
+        "- Silhouette strongly suggests **K = 2**  \n",
+        "- Because Silhouette directly measures cluster quality, the optimal number of clusters is:\n",
+        "\n",
+        " **BEST_K = 2**"
       ],
       "metadata": {
         "id": "pKZOIHxw9myJ"
@@ -5435,21 +5437,31 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### Interpretation of Clustering Results (K = 3)\n",
         "\n",
-        "For the optimal K = 3, the clusters show meaningful student groupings:\n",
         "\n",
-        "1. **High-performing cluster**\n",
-        "   - High GPA, low absences, higher study time, strong parental support.\n",
-        "   - Likely corresponds to GradeClass 3–4.\n",
+        "### Interpretation of Clustering Results (K = 2)\n",
         "\n",
-        "2. **Low-performing cluster**\n",
-        "   - Low GPA, high absences, lower study time.\n",
-        "   - Likely corresponds to GradeClass 0–1.\n",
+        "Using K = 2, two clear groups of students appear:\n",
         "\n",
-        "3. **Medium-performing cluster**\n",
-        "   - Moderate GPA and absences with average study habits.\n",
-        "   - Represents students between low and high performance (GradeClass 2–3)."
+        "#### **Cluster 1 — High-performing students**\n",
+        "- High GPA  \n",
+        "- Low absences  \n",
+        "- Higher parental support  \n",
+        "- Better study habits  \n",
+        "\n",
+        "#### **Cluster 2 — Low-performing students**\n",
+        "- Low GPA  \n",
+        "- High absences  \n",
+        "- Lower parental support  \n",
+        "- Lower study time  \n",
+        "\n",
+        "These two groups reflect the strongest relationships in the dataset, especially the negative correlation between GPA and Absences.\n",
+        "\n",
+        "\n",
+        "### Final Conclusion for K-means\n",
+        "\n",
+        "Based on WCSS (Elbow) and Silhouette analysis, the optimal number of clusters is **K = 2**, not 3.  \n",
+        "This value provides the best separation between student groups and aligns with the strongest behavioral patterns in the dataset."
       ],
       "metadata": {
         "id": "m8BtS73a-fx0"
@@ -5499,7 +5511,7 @@
         "K-means clustering was applied with K values from 2 to 10. Using both WCSS (Elbow Method) and Silhouette scores:\n",
         "\n",
         "- The Elbow plot suggests **K ≈ 4** as a good balance between model complexity and within-cluster variance.\n",
-        "- The Silhouette scores indicate that **K = 3** provides the best cluster separation.\n",
+        "- The Silhouette scores indicate that **K = 2** provides the best cluster separation.\n",
         "\n",
         "The final clusters reveal distinct student groups:\n",
         "- A high-performance group: high GPA, high study time, low absences, good parental support.\n",
