--- a/Reports Folder/Phase3.ipynb
+++ b/Reports Folder/Phase3.ipynb
@@ -158,7 +158,7 @@
         "id": "yOw0pkMP24y7",
         "outputId": "4e9f40b7-d9ee-45c7-a537-5f2b7fa9796b"
       },
-      "execution_count": 181,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -685,7 +685,7 @@
         },
         "outputId": "ce146cfd-b609-4d38-e564-728b6f0f24ad"
       },
-      "execution_count": 182,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1233,7 +1233,7 @@
           "height": 253
         }
       },
-      "execution_count": 183,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1662,7 +1662,7 @@
           "height": 255
         }
       },
-      "execution_count": 184,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2070,7 +2070,7 @@
         },
         "outputId": "4367b1ef-8360-43c6-a5d5-1304f2d94a43"
       },
-      "execution_count": 185,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2460,7 +2460,7 @@
           "height": 1247
         }
       },
-      "execution_count": 186,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4688,7 +4688,7 @@
         "id": "5rL3D24rFlca",
         "outputId": "1abc0d54-b063-4b24-dd59-3d6ebbd93251"
       },
-      "execution_count": 197,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4804,7 +4804,7 @@
           "height": 272
         }
       },
-      "execution_count": 188,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4865,11 +4865,10 @@
         "id": "R59-S6hM0QE4",
         "outputId": "5e2845b8-cfc5-4607-aed9-5cb667f61785",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 189,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4922,7 +4921,7 @@
           "height": 328
         }
       },
-      "execution_count": 190,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5305,7 +5304,7 @@
         "\n",
         "The Elbow curve begins to flatten around **K ≈ 4**, indicating diminishing improvement in compactness beyond this point.\n",
         "\n",
-        "However, the **highest Silhouette Score occurs at K = 3**, which means K = 2 provides the strongest separation and cohesion between clusters.\n",
+        "However, the **highest Silhouette Score occurs at K = 3**, which means K = 3 provides the strongest separation and cohesion between clusters.\n",
         "\n",
         "**Conclusion:**\n",
         "- Elbow suggests K ≈ 4  \n",
@@ -5329,12 +5328,11 @@
       "metadata": {
         "id": "CQvwjpgc9skF",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "25e7d083-31bf-459d-9c98-c7613585e42d"
       },
-      "execution_count": 191,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5399,7 +5397,7 @@
         "id": "tqzAVDYCD2VL",
         "outputId": "aeb87473-e8c5-4d9b-98de-11d2f530203b"
       },
-      "execution_count": 192,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5474,7 +5472,7 @@
           "height": 783
         }
       },
-      "execution_count": 193,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5536,7 +5534,7 @@
           "height": 142
         }
       },
-      "execution_count": 194,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5893,12 +5891,11 @@
       "metadata": {
         "id": "Qdibm0y1-WHA",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "80ad72b5-629e-41fe-e968-efcf91fe331f"
       },
-      "execution_count": 195,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5943,7 +5940,7 @@
           "height": 1155
         }
       },
-      "execution_count": 196,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5976,35 +5973,6 @@
           "metadata": {}
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Using K = 3, three clear groups of students appear:\n",
-        "\n",
-        "### Cluster 1 — High-performing students\n",
-        "- High GPA  \n",
-        "- Low absences  \n",
-        "- Strong parental support  \n",
-        "- Good study habits  \n",
-        "\n",
-        "### Cluster 2 — Medium-performing students\n",
-        "- Moderate GPA  \n",
-        "- Moderate absences  \n",
-        "- Average parental support  \n",
-        "- Mixed study habits  \n",
-        "\n",
-        "### Cluster 3 — Low-performing students\n",
-        "- Low GPA  \n",
-        "- High absences  \n",
-        "- Lower parental support  \n",
-        "- Weak study habits  \n",
-        "\n",
-        "These clusters reflect the strongest relationships in the dataset, especially the negative correlation between GPA and Absences."
-      ],
-      "metadata": {
-        "id": "s1Mu4zmW6adY"
-      }
     },
     {
       "cell_type": "markdown",
